# quickchat-ai-mcp

./: README.md  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: main.yml
quickchat_ai_mcp/: __main__.py  server.py
src/: __main__.py  server.py
test/: test_server.py
