[project]
name = "quickchat-ai-mcp"
version = "0.1.0"
description = "Quickchat AI MCP Server"
authors = [
    { name = "Piotr Grudzien", email = "piotr@quickchat.ai" },
    { name = "Mateusz Jakubczak", email = "mateusz@quickchat.ai" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.31.0",
    "mcp>=1.0.0"
]
keywords=[
    "quickchat",
    "mcp",
    "ai-agent"
]
